@@ -4,3 +4,6 @@
  	- read XML DMs list
     - read single  XML DM list
  	- send Direct message
+ 	
+ * Favorites list
+ 	-	 Request Favorites list
